<resources>

    <string name="app_name">AlDraw</string>
    <string name="dotradius">Dot Radius</string>
    <string name="linewidth">Line Width</string>
    <string name="clear">Clear</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="autozoom">Zoom</string>
    <string name="open">Open</string>
    <string name="save">Save</string>
    <string name="export">Export</string>
    <string name="share">Share</string>
    <string name="clearselections">Clear Selections</string>
    <string name="choosecolor">Choose Color</string>
    <string name="view">View</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">AlDraw</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="basicmodes">
        <item>Draw Segment</item>
        <item>Draw Ray</item>
        <item>Draw Line</item>
        <item>Draw Arc</item>
        <item>Draw Circle</item>
    </string-array>
    <string-array name="editmodes">
        <item>Copy</item>
        <item>Paste</item>
        <item>Select Segment</item>
        <item>Select Ray</item>
        <item>Select Line</item>
        <item>Select Arc</item>
        <item>Select Circle</item>
        <item>Select Point</item>
    </string-array>
    <string-array name="extendedmodes">
        <item>Set Mark Distance</item>
        <item>Draw Mark Line</item>
        <item>Draw Mark Circle</item>
    </string-array>
    <string-array name="shortcutmodes">
        <item>Find Midpoint</item>
        <item>Trisect Line</item>
        <item>Perpendicular Bisector</item>
        <item>Angle Bisector</item>
        <item>Find Tangent Line</item>
        <item>Find Parallel Line</item>
        <item>Circumscribe Triangle</item>
    </string-array>
    <string-array name="cleanupmodes">
        <item>Delete Segment</item>
        <item>Delete Ray</item>
        <item>Delete Line</item>
        <item>Delete Arc</item>
        <item>Delete Circle</item>
        <item>Delete Point</item>
    </string-array>
    <string-array name="colormodes">
        <item>Fill Color</item>
        <item>Erase Color</item>
        <item>Pick Color</item>
    </string-array>
    <string-array name="modegroups">
        <item>Basic</item>
        <item>Edit</item>
        <item>Extended</item>
        <item>Shortcuts</item>
        <item>Clean Up</item>
        <item>Color</item>
    </string-array>
    <string-array name="rotationunits">
        <item>Degrees</item>
        <item>π Radians</item>
    </string-array>
    
    <string name="default_view">Default View</string>
    <string name="default_rotation">Default Rotation</string>
    <string name="show_lines">Show Lines</string>
    <string name="show_points">Show Points</string>
    <string name="lock_rotation">Lock Rotation</string>
    <string name="rotate">Rotate</string>
    <string name="done">Done</string>
    
    <string name="filename">File Name</string>

    <string name="title_activity_settings">Settings</string>
    <string name="type">Type</string>
    <string name="svg">SVG</string>
    <string name="png">PNG</string>
    <string name="background">Background</string>
    <string name="white_background">White</string>
    <string name="transparent_background">Transparent</string>
    <string name="size">Size</string>
    <string name="hsv">HSV</string>
    <string name="rgb">RGB</string>

</resources>