<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/menu_clear"
        android:title="@string/clear"
        android:orderInCategory="10"
        android:showAsAction="always" />
    <item android:id="@+id/menu_undo"
        android:title="@string/undo"
        android:orderInCategory="20"
        android:showAsAction="always" />
    <item android:id="@+id/menu_redo"
        android:title="@string/redo"
        android:orderInCategory="30"
        android:showAsAction="always" />
    <item android:id="@+id/menu_autozoom"
        android:title="@string/autozoom"
        android:orderInCategory="40"
        android:showAsAction="always" />
    <item android:id="@+id/menu_open"
        android:title="@string/open"
        android:orderInCategory="50"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_save"
        android:title="@string/save"
        android:orderInCategory="60"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_export"
        android:title="@string/export"
        android:orderInCategory="70"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_share"
        android:title="@string/share"
        android:orderInCategory="80"
        android:showAsAction="ifRoom"
        android:actionProviderClass="android.widget.ShareActionProvider" />
    <item android:id="@+id/menu_clearselections"
        android:title="@string/clearselections"
        android:orderInCategory="90"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_choosecolor"
        android:title="@string/choosecolor"
        android:orderInCategory="100"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_view"
        android:title="@string/view"
        android:orderInCategory="110"
        android:showAsAction="ifRoom" />
    <item android:id="@+id/menu_settings"
        android:title="@string/menu_settings"
        android:orderInCategory="120"
        android:showAsAction="ifRoom" />
</menu>
