<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <TextView 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/type"
        android:textSize="20sp"/>
    
    <RadioGroup
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/export_svg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/svg"/>
        <RadioButton android:id="@+id/export_png"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/png"/>
    </RadioGroup>
    
    <TextView android:id="@+id/background_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/background"
        android:textSize="20sp"/>
    
    <RadioGroup
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton android:id="@+id/white_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/white_background"/>
        <RadioButton android:id="@+id/transparent_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/transparent_background"/>
    </RadioGroup>
    
    <TextView android:id="@+id/size_label"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/size"
        android:textSize="20sp"/>
    
    <NumberPicker android:id="@+id/export_size"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/cancelExport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
        	style="@android:style/ButtonBar" />
        
        <Button
            android:id="@+id/okExport"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
      	  style="@android:style/ButtonBar" />

    </LinearLayout>

</LinearLayout>