<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <Button 
        android:id="@+id/defaultView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_view" />
    <Button 
        android:id="@+id/defaultRotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_rotation" />
    <CheckBox
        android:id="@+id/showLines"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:text="@string/show_lines" />
    <CheckBox
        android:id="@+id/showPoints"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:text="@string/show_points" />
    <LinearLayout 
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
    	<Button
            android:id="@+id/rotateButton"
            android:layout_width="wrap_content"
    		android:layout_height="wrap_content"
    		android:text="@string/rotate" />"
        <EditText 
            android:id="@+id/rotateAmount"
        	android:layout_width="0dp"
    		android:layout_height="wrap_content"
    		android:layout_weight="1"
    		android:inputType="number" />
        <Spinner 
            android:id="@+id/rotateUnits"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <CheckBox
        android:id="@+id/lockRotation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:text="@string/lock_rotation" />
    <Button
        android:id="@+id/view_done"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
 		android:text="@string/done"
 		style="@android:style/ButtonBar" />

</LinearLayout>