<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
    <ListView 
        android:id="@+id/filelist"
        android:layout_width="match_parent"
    	android:layout_height="0dp"
    	android:layout_weight="1" />
    
    <EditText 
        android:id="@+id/filename"
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:inputType="text"
    	android:hint="@string/filename" />
    
    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">

		<Button
            android:id="@+id/cancelFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            style="@android:style/ButtonBar" />
		
		<Button
            android:id="@+id/okFile"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ok"
            style="@android:style/ButtonBar" />
    </LinearLayout>

</LinearLayout>